# S1-Analysis

./: .gitignore  README.md  Test.ipynb  hybrid_search.py  latest_ipos.py  llm.py  main.py  pyproject.toml  sec.py  todo-ruoyu.txt  todo-ryan.txt
data/: aclarion_s1a1.html  aen_s1.html  amendment.html  calor_s1.html  d835594ds1a.html  d898161ds1.html  e6227_s-1.html  ea0209567-05.html  ea0225566-s1a1_dmint.html  ea0225697-s1_heliocorp.html  ea0226148-s1_nxuinc.html  ea0226237-s1a1_inmedpharma.html  forms-1.html  forms-1a.html  gevi_s1a.html  lafa_s1.html  luxurbanhotels_s1a.html  mayau_s1.html  ny20039820x7_s1a.html  scpx_s1.html  tm2426182d6_s1a.html  tmgi_s1a4.html  tmgi_s1a5.html
data/sample_rag_output/: uber-03-24-2025.txt
docker/: docker-compose.yml
docker/init/: init.sql
notebooks/: Read S1.ipynb  Test.ipynb
