[tool.poetry]
name = "s1-analysis"
version = "0.1.0"
description = ""
authors = ["Ruoyu Chen, Ryan Luu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sec-parser = "^0.58.1"
openai = "^1.65.4"
anthropic = "^0.49.0"
dotenv = "^0.9.9"
ollama = "^0.4.7"
ipykernel = "^6.29.5"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
psycopg2-binary = "^2.9.10"
langchain-postgres = "^0.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
